--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mercados</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="/images/icon-256_ios.png">
+    <link rel="icon" href="/images/camera_256.png" sizes="256x256" />
+    <meta name="theme-color" content="white" />
+    <script>navigator.serviceWorker.register("sw.js")</script> 
+   
   </head>
   <body>
     <div id="app"></div>
