--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
     <script>navigator.serviceWorker.register("sw.js")</script> 
   </head>
   <body>
-   
-  <h2>Cadastro de Supermercados</h2>
+    <header class="header-fixed">
+      <div class="header-limiter">
+        <h1>Mercados</h1>
+      </div>
+    </header>
 
   <form id="supermarketForm">
+    <h3>Cadastro de mercados</h3>
     <label for="nome">Nome:</label>
     <input type="text" id="nome" required>
 
@@ -28,8 +32,10 @@
     <button type="button" onclick="cadastrarSupermercado()">Cadastrar</button>
   </form>
 
-  <h2>Lista de Supermercados Cadastrados</h2>
+  <div class="listagem">
+  <h3>Lista de mercados cadastrados</h3>
   <ul id="supermarketList"></ul>
   <div id="map"></div>
+</div>
   </body>
 </html>
