--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
             <input type="text" id="localizacao" name="localizacao" required>
 
             <button type="button" onclick="cadastrarMercado()">Cadastrar</button>
+            <br>  
+
+            <button type="button" onclick="listarMercados()">Listar Mercados</button>
+            <br>
+
         </form>
 
         <div id="listaMercados">
-    
+          
         </div>
 
         <div id="mapa"></div>
